@@ -19,6 +19,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import com.recruitment.filter.JwtFilter;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -27,47 +28,64 @@ public class SecurityConfig {
     @Autowired
     private JwtFilter jwtFilter;
 
+    // Public endpoints that don't require authentication - UPDATED
+    private static final String[] PUBLIC_ENDPOINTS = {
+        "/auth/user/register",
+        "/auth/user/login",
+        "/auth/user/verify-email",
+        "/auth/user/resend-verification", // ✅ Already exists
+        "/auth/user/logout",
+        "/auth/employee/register",
+        "/auth/employee/login",
+        "/auth/employee/logout",
+        "/auth/employee/verify",
+        "/auth/employee/resend-verification", // ✅ ADD THIS LINE - FIXES 403 ERROR
+        "/api/admin/register",
+        "/api/admin/login",
+        "/api/admin/logout",
+        "/api/admin/users",
+        "/api/admin/employees",
+        "/api/jobs/all",
+        "/api/jobs/view/**",
+        "/api/jobs/filter",
+        "/api/public/**"
+    };
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http.csrf(csrf -> csrf.disable())
+        http
+            .csrf(csrf -> csrf.disable())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .authorizeHttpRequests(authz -> authz
-                .requestMatchers(
-                    "/auth/user/register", 
-                    "/auth/user/login", 
-                    "/auth/user/verify-email", 
-                    "/auth/user/resend-verification",
-                    "/auth/user/logout",
-                    "/auth/employee/register", 
-                    "/auth/employee/login", 
-                    "/auth/employee/logout", 
-                    "/auth/employee/verify",
-                    "/api/admin/register",
-                    "/api/admin/login",
-                    "/api/admin/logout",
-                    "/api/public/**"
-                ).permitAll()
+                .requestMatchers(PUBLIC_ENDPOINTS).permitAll()
                 .anyRequest().authenticated()
             )
             .sessionManagement(session -> session
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            );
-        
-        http.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
-        
+            )
+            .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Disposition"));
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization", "Content-Type", "X-Requested-With", 
+            "Accept", "Origin", "Access-Control-Request-Method", 
+            "Access-Control-Request-Headers"
+        ));
+        configuration.setExposedHeaders(Arrays.asList(
+            "Authorization", "Content-Disposition"
+        ));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -81,6 +99,21 @@ public class SecurityConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        return new PasswordEncoder() {
+            private final BCryptPasswordEncoder bcrypt = new BCryptPasswordEncoder();
+
+            @Override
+            public String encode(CharSequence rawPassword) {
+                return bcrypt.encode(rawPassword);
+            }
+
+            @Override
+            public boolean matches(CharSequence rawPassword, String encodedPassword) {
+                if (encodedPassword != null && encodedPassword.startsWith("$2a$")) {
+                    return bcrypt.matches(rawPassword, encodedPassword);
+                }
+                return rawPassword.toString().equals(encodedPassword);
+            }
+        };
     }
 }
